--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,4 +9,5 @@ jobs:
       - name: Compile CV LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
+          working_directory: CV/
           root_file: CV/main.tex
