--- a/.github/workflows/cv.yml
+++ b/.github/workflows/cv.yml
@@ -10,4 +10,4 @@ jobs:
         uses: xu-cheng/latex-action@v2
         with:
           working_directory: CV/
-          root_file: CV/main.tex
+          root_file: main.tex
