--- a/.github/workflows/cv.yml
+++ b/.github/workflows/cv.yml
@@ -1,15 +1,50 @@
-name: Build LaTeX document
-on: [push]
+# This is a basic workflow to help you get started with Actions
+
+name: run_latex
+
+# Controls when the action will run. Triggers the workflow on push or pull request
+# events but only for the main branch
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build_latex:
+  build_PDFs:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Set up Git repository
-        uses: actions/checkout@v1
-      - name: Compile LaTeX document
-        uses: xu-cheng/latex-action@master
-        with:
-          working_directory: CV/
-          root_file: main.tex
-          pre_compile: "tlmgr update --all"
-          latexmk_use_lualatex: true
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: xu-cheng/texlive-action/full@v1
+
+      - name: update texlive
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y texlive-xetex
+          sudo apt-get install -y latexmk
+          sudo apt-get install -y texlive-lang-german
+          sudo apt-get install -y texlive-fonts-recommended
+          sudo apt-get install -y texlive-fonts-extra
+
+      - uses: actions/checkout@v2
+
+      - name: Pull
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git pull
+
+      # Runs a set of commands using the runners shell
+      - name: Run beamer script
+        run: |
+          xelatex main.tex
+
+      - name: Commit
+        run: |
+          git add .
+          git diff-index --quiet HEAD || git commit -m "action generated new PDFs using beamer"
+          git push
