--- a/.github/workflows/cv.yml
+++ b/.github/workflows/cv.yml
@@ -15,6 +15,9 @@ jobs:
   build_PDFs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./CV
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -41,7 +44,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run beamer script
         run: |
-          xelatex ./CV/main.tex
+          xelatex main.tex
 
       - name: Commit
         run: |
