--- a/.github/workflows/cv.yml
+++ b/.github/workflows/cv.yml
@@ -29,6 +29,7 @@ jobs:
           sudo apt-get install -y texlive-lang-german
           sudo apt-get install -y texlive-fonts-recommended
           sudo apt-get install -y texlive-fonts-extra
+          sudo apt-get install -y fonts-dancingscript
 
       - uses: actions/checkout@v2
 
