--- a/.github/workflows/cv.yml
+++ b/.github/workflows/cv.yml
@@ -30,6 +30,7 @@ jobs:
           sudo apt-get install -y texlive-fonts-recommended
           sudo apt-get install -y texlive-fonts-extra
           sudo apt-get install -y fonts-dancingscript
+          sudo apt-get install -y texlive-bibtex-extra biber
 
       - uses: actions/checkout@v2
 
